The lldb HashTable summary provider often throws errors, and doesn't work https://bugs.webkit.org/show_bug.cgi?id=292312 rdar://150330454

Reviewed by Alex Christensen.

Fix two issues, with the HashTable summary provider, which allows us to remove
`m_tableForLLDB`.

First, handle `m_table` being null, which is the initial state.

Second, fix the code that indexes to negative offsets from `m_table`
to work, using `SBValue.CreateValueFromAddress()`.

Finally it's more logical to summarize these as 'keyCount, tableSize' to match the
Vector summary.

* Source/WTF/wtf/HashTable.h:
* Tools/lldb/lldb_webkit.py:
(WTFHashTable_SummaryProvider):
(WTFHashMap_SummaryProvider):
(WTFHashSet_SummaryProvider):
(WTFHashTableProvider.metadataWithIndex):

Canonical link: https://commits.webkit.org/294316@main