Source/WTF/wtf/HashTable.h
@@ -606,10 +606,7 @@ DECLARE_ALLOCATOR_WITH_HEAP_IDENTIFIER(HashTable);
         unsigned deletedCount() const { ASSERT(m_table); return reinterpret_cast_ptr<unsigned*>(m_table)[deletedCountOffset]; }
         void setDeletedCount(unsigned count) const { ASSERT(m_table); reinterpret_cast_ptr<unsigned*>(m_table)[deletedCountOffset] = count; }
 
-        union {
-            ValueType* m_table { nullptr };
-            unsigned* m_tableForLLDB;
-        };
+        ValueType* m_table { nullptr };
 
 #if CHECK_HASHTABLE_ITERATORS
     public:
